--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -1,3 +1,4 @@
 <h1>Recipe Box</h1>
 
-<p>@Html.ActionLink("See Recipes", "Index", "Recipe")</p>
+<p>@Html.ActionLink("See Recipes", "Index", "Recipes")</p>
+<p>@Html.ActionLink("See Categories", "Index", "Categories")</p>
