create Index and Register Views for Account
Co-Authored-by: Albert Lee <leesga8@gmail.com>
Co-authored-by: Liz Thomas <thomas.elizabeth.k@gmail.com>

--- a/RecipeBox/Views/Categories/Details.cshtml
+++ b/RecipeBox/Views/Categories/Details.cshtml
@@ -15,6 +15,12 @@ else
     @foreach(var join in Model.JoinEntities)
     {
       <li>@join.Recipe.Name</li>
+      @using (Html.BeginForm("DeleteRecipe", "Categories"))
+      {
+      @Html.Hidden("joinId", @join.CategoryRecipeId)
+      @Html.Hidden("categoryId", @Model.CategoryId)
+      <input type="submit" value="Delete"/>
+      }
     }
   </ul>
 }
