--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -2,3 +2,4 @@
 
 <p>@Html.ActionLink("See Recipes", "Index", "Recipes")</p>
 <p>@Html.ActionLink("See Categories", "Index", "Categories")</p>
+<p>@Html.ActionLink("LogIn", "Index", "Account")</p>
