add erors for using same values in creates
Co-Authored-by: Albert Lee <leesga8@gmail.com>
Co-authored-by: Liz Thomas <thomas.elizabeth.k@gmail.com>

--- a/RecipeBox/Views/Categories/Create.cshtml
+++ b/RecipeBox/Views/Categories/Create.cshtml
@@ -1,7 +1,9 @@
 @model RecipeBox.Models.Category
 
 <h4>Add a new categories</h4>
-
+@if(ViewBag.Same!="test"){
+  <p>@ViewBag.Same</p>
+}
 @using(Html.BeginForm())
 {
   @Html.LabelFor(model => model.Name)
