--- a/RecipeBox/Views/Categories/Index.cshtml
+++ b/RecipeBox/Views/Categories/Index.cshtml
@@ -16,5 +16,5 @@ else
   </ul>
 }
 
-<p>@Html.ActionLink("Add new Category", "Create")</p>
+<p>@Html.ActionLink("Add new Category", "Create", new { str = "test" })</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
