--- a/RecipeBox/Views/Recipes/Index.cshtml
+++ b/RecipeBox/Views/Recipes/Index.cshtml
@@ -1,13 +1,9 @@
 @using RecipeBox.Models;
-@model List<RecipeBox.Models.Recipe>;
+@model IEnumerable<RecipeBox.Models.Recipe>;
 
-<h2>Recipes</h2>
+<h2>Recipes for @User.Identity.Name</h2>
 
-@if(Model.Count == 0)
-{
-  <p> There are currently no recipes in your recipe box</p>
-}
-else
+@if(Model.Any())
 {
   <ul>
     @foreach(Recipe recipe in Model)
@@ -16,5 +12,10 @@ else
     }
   </ul>
 }
+else
+{
+  <h3>No recipes have been added yet!</h3>
+}
 
 <p>@Html.ActionLink("Add a new recipe", "Create")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
