add ingredient model and join table with recipe
Co-authored-by: Liz Thomas <thomas.elizabeth.k@gmail.com>
Co-Authored-by: Albert Lee <leesga8@gmail.com>

--- a/RecipeBox/Views/Recipes/Index.cshtml
+++ b/RecipeBox/Views/Recipes/Index.cshtml
@@ -8,7 +8,7 @@
   <ul>
     @foreach(Recipe recipe in Model)
     {
-      <li>@Html.ActionLink($"{recipe.Name}", "Details", new { id = recipe.RecipeId })</li>
+      <li>@Html.ActionLink($"{recipe.Name}", "Details", new { id = recipe.RecipeId }) | @recipe.Rating⭐</li>
     }
   </ul>
 }
