--- a/RecipeBox/Views/Recipes/Create.cshtml
+++ b/RecipeBox/Views/Recipes/Create.cshtml
@@ -8,7 +8,7 @@
     @Html.TextBoxFor(model => model.Name)
 
     @Html.LabelFor(model => model.Ingredients)
-    @Html.TextBoxFor(model => model.Ingredients)
+    @Html.EditorFor(model => model.Ingredients)
 
     @Html.LabelFor(model => model.Directions)
     @Html.TextBoxFor(model => model.Directions)
