--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -2,4 +2,5 @@
 
 <p>@Html.ActionLink("See Recipes", "Index", "Recipes")</p>
 <p>@Html.ActionLink("See Categories", "Index", "Categories")</p>
+<p>@Html.ActionLink("See List of Ingredients", "Index", "Ingredient")</p>
 <p>@Html.ActionLink("LogIn", "Index", "Account")</p>
