--- a/RecipeBox/Views/Categories/Index.cshtml
+++ b/RecipeBox/Views/Categories/Index.cshtml
@@ -1,12 +1,9 @@
 @using RecipeBox.Models;
+@model IEnumerable<RecipeBox.Models.Category>
 
-<h2>Categories</h2>
+<h2>Categories for @User.Identity.Name</h2>
 
-@if(Model.Count == 0)
-{
-  <p>You have not created any categories yet!</p>
-}
-else
+@if(Model.Any())
 {
   <ul>
     @foreach(Category category in Model)
@@ -14,6 +11,11 @@ else
       <li>@Html.ActionLink($"{category.Name}", "Details", new { id = category.CategoryId })</li>
     }
   </ul>
+  
+}
+else
+{
+  <p>You have not created any categories yet!</p>
 }
 
 <p>@Html.ActionLink("Add new Category", "Create", new { str = "test" })</p>
