--- a/RecipeBox/Views/Recipes/AddIngredient.cshtml
+++ b/RecipeBox/Views/Recipes/AddIngredient.cshtml
@@ -35,5 +35,5 @@ else
   </ul>
 }
 
-<p>@Html.ActionLink("Back to Recipe Card", "Details", new { id = Model.RecipeId})
-<p>@Html.ActionLink("Add new ingredient", "Index", "Ingredient")
+<p>@Html.ActionLink("Back to Recipe Card", "Details", new { id = Model.RecipeId})</p>
+<p>@Html.ActionLink("Add new ingredient", "Index", "Ingredient")</p>
