--- a/RecipeBox/Views/Recipes/Details.cshtml
+++ b/RecipeBox/Views/Recipes/Details.cshtml
@@ -3,8 +3,8 @@
 <h2>Recipe Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
-<h3>@Html.DisplayNameFor(model => model.Directions): @Html.DisplayFor(model => model.Directions)</h3>
 <h3>@Html.DisplayNameFor(model => model.Rating): @Html.DisplayFor(model => model.Rating)</h3>
+<h3>@Html.DisplayNameFor(model => model.Directions): @Html.DisplayFor(model => model.Directions)</h3>
 <h3>@Html.DisplayNameFor(model => model.Shared): @Html.DisplayFor(model => model.Shared)</h3>
 @using (Html.BeginForm("ShareRecipe", "Recipes"))
   {
@@ -27,7 +27,7 @@ else
     {
       @Html.Hidden("joinId", @join.CategoryRecipeId)
       @Html.Hidden("recipeId", @Model.RecipeId)
-      <input type="submit" value="Delete"/>
+      <input type="submit" value="Delete" class="btn btn-danger" />
     }
   }
   </ul>
