--- a/RecipeBox/Views/Shared/_Layout.cshtml
+++ b/RecipeBox/Views/Shared/_Layout.cshtml
@@ -10,9 +10,11 @@
 </head>
 
 <body>
+  @await Html.PartialAsync("_Header")
   <div class="container">
     @RenderBody()
   </div>
+  @await Html.PartialAsync("_Footer")
 </body>
 
 </html>
