--- a/RecipeBox/Views/Account/Login.cshtml
+++ b/RecipeBox/Views/Account/Login.cshtml
@@ -2,16 +2,16 @@
 
 @model LoginViewModel
 
-<h2>Log in with your account</h2>
+<h2>Log in to your account</h2>
 <hr />
 
 @using(Html.BeginForm())
 {
-  @Html.LabelFor(m => m.Email)
-  @Html.TextBoxFor(m => m.Email)
+  <p>@Html.LabelFor(m => m.Email)
+  @Html.TextBoxFor(m => m.Email)</p>
 
-  @Html.LabelFor(m => m.Password)
-  @Html.PasswordFor(m => m.Password)
+  <p>@Html.LabelFor(m => m.Password)
+  @Html.PasswordFor(m => m.Password)</p>
 
   <input type="submit" value="Log in" class="btn btn-default" />
 }
