--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -1,6 +1,23 @@
-<h1>Recipe Box</h1>
+@using RecipeBox.Models;
+@model List<RecipeBox.Models.Recipe>;
 
-<p>@Html.ActionLink("See Recipes", "Index", "Recipes")</p>
-<p>@Html.ActionLink("See Categories", "Index", "Categories")</p>
-<p>@Html.ActionLink("See List of Ingredients", "Index", "Ingredient")</p>
-<p>@Html.ActionLink("LogIn", "Index", "Account")</p>
+<h1>Recipe Box</h1>
+<h5>A place to store and share your recipes</h5>
+<img src="~/img/veggies.png" />
+<div class=shared>
+  <h3>Shared Recipes</h3>
+  
+  @if(Model.Count != 0)
+  {
+    <ul>
+      @foreach(Recipe recipe in Model)
+      {
+        <li>@Html.ActionLink($"{recipe.Name}", "Details", new { id = recipe.RecipeId }) | @recipe.Rating⭐</li>
+      }
+    </ul>
+  }
+  else
+  {
+    <h3>No recipes have been added yet!</h3>
+  }
+</div>
