--- a/RecipeBox/Views/Recipes/Edit.cshtml
+++ b/RecipeBox/Views/Recipes/Edit.cshtml
@@ -20,7 +20,7 @@
     @Html.Label("Select category")
     @Html.DropDownList("CategoryId")
 
-    <input type="submit" value="Save" />
+    <input type="submit" value="Save" class="btn btn-dark" />
 }
 
-<p>@Html.ActionLink("Back to list", "Index")</p>
+<p class="buttonz">@Html.ActionLink("Back to list", "Index")</p>
